--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vlightbox": "^2.0.2",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.1",
-    "vue-axios": "^3.2.0",
+    "vue-axios": "^3.5.2",
     "vue-backtotop": "^1.6.1",
     "vue-chartjs": "^3.5.1",
     "vue-clipboard2": "^0.3.1",
@@ -38,7 +38,7 @@
     "vue-highlight-words": "^1.2.0",
     "vue-html-to-paper": "^1.3.1",
     "vue-infinite-loading": "^2.4.5",
-    "vue-js-modal": "^2.0.0-rc.6",
+    "vue-js-modal": "^2.0.1",
     "vue-js-popover": "^1.2.1",
     "vue-json-excel": "^0.3.0",
     "vue-loading-overlay": "^3.4.2",
