--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "longdo-map-vue": "^2.1.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "printd": "^1.4.2",
