update report docx pptx

--- a/package.json
+++ b/package.json
@@ -17,13 +17,26 @@
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "docx": "^8.2.4",
+    "docxtemplater": "^3.42.4",
+    "docxtemplater-image-module": "^3.1.0",
+    "docxtemplater-image-module-free": "^1.1.1",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "heatmap.js": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "image-size": "^1.0.2",
     "jquery": "^3.6.0",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "leaflet": "^1.7.1",
     "longdo-map-vue": "^2.1.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
+    "open-docxtemplater-image-module": "^1.0.3",
     "papaparse": "^5.4.1",
+    "pizzip": "^3.1.4",
+    "pptxgenjs": "^3.12.0",
     "printd": "^1.4.2",
     "v-tooltip": "^2.1.2",
     "vlightbox": "^2.0.2",
@@ -97,6 +110,11 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "browserslist": [
     "> 1%",
